--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1"
   }
